# fsreading_backend

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
configs/: __init__.py  app_config.py  database_config.py
deploy/dev/: docker-compose.middleware.yaml
extensions/: ext_migrate.py
migrations/: script.py.mako
models/: Account.py
